gateway-istio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: blog-demo-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: regex
      hostname: gw-regex.example.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: trailing
      hostname: gw-trailing.example.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: normalize
      hostname: gw-normalize.example.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
