trailing-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trailing-slash-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: trailing-slash.example.com
    http:
      paths:
      - path: "/header/"
        pathType: Exact
        backend:
          service:
            name: httpbin
            port:
              number: 8000
